Fix line spacing for address in how-to-contact.

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -380,7 +380,6 @@ Where: All modules, display on RHS sidebar
 What: Fixes right sidebar label:content alignment - Fixes issue also present in D7
 */
 .detail-item__body--secondary, .detail-item__body--tertiary {
-  line-height: 1.5rem;
   margin-top: 2px;
 }
 .detail-item__body--secondary, .detail-item__body--tertiary a {
